[project]
name = "nios-ibx-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "appdirs==1.4.4",
    "build==1.4.0",
    "cachecontrol==0.14.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cleo==2.1.0",
    "click==8.3.1",
    "click-option-group==0.5.9",
    "coloredlogs==15.0.1",
    "crashtest==0.4.1",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "dulwich==1.0.0",
    "fastjsonschema==2.21.2",
    "filelock==3.20.3",
    "findpython==0.7.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "ibx-sdk==0.7.7",
    "idna==3.11",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "keyring==25.7.0",
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "netaddr==1.3.0",
    "packaging==25.0",
    "pbs-installer==2026.1.14",
    "pexpect==4.9.0",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.1",
    "ptyprocess==0.7.0",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "setuptools==80.10.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "syslog-rfc5424-formatter==1.2.3",
    "tomlkit==0.14.0",
    "tqdm==4.67.1",
    "trove-classifiers==2026.1.14.14",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uc-micro-py==1.0.3",
    "urllib3==2.6.3",
    "virtualenv==20.36.1",
    "xattr==1.3.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.13",
]
